[package]
name = "module"
version = "0.1.0"
description = "Python WRAP engine"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/py-engine-wrap"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "=0.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
getrandom = { version = "=0.2.9", features = ["custom"] }

rustpython-vm = { path = "../RustPython/vm", default-features = false, features = ["compiler", "encodings", "serde"] }
num-traits = "0.2.15"

[dev-dependencies]
polywrap_client = "0.1.6-beta.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
